Fixed the 'too small pages' issue few wankers had

--- a/src/App.css
+++ b/src/App.css
@@ -31,14 +31,7 @@ body {
 
 
 img {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: auto;
-  height: auto;
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
 }
 
 .container {
@@ -55,10 +48,10 @@ img {
 }
 
 .half {
-  position: relative;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
+    flex: 1 1;
+    overflow-y: scroll;
+    display: block;
+    width: 50%;
 }
 
 .selected {
@@ -67,6 +60,8 @@ img {
 
 
 #sliderContainer {
+  padding: 10px;
+  overflow: hidden;
   box-shadow: 0px -2px 17px 0px rgba(0,0,0,0.75);
   margin-top: 10px;
   flex: 1;
@@ -120,6 +115,7 @@ img {
 }
 
 .input {
+  width: 90%;
   z-index: 1;
   box-shadow: -2px 0px 17px 0px rgba(0,0,0,0.75);
   padding-left   : 15px;
